--- a/index.html
+++ b/index.html
@@ -5,20 +5,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="modulepreload" href="https://jspm.dev/uuid">
+    <link rel="modulepreload" href="./js/app.mjs">
     <script src="https://kit.fontawesome.com/368dbbd85d.js" crossorigin="anonymous"></script>
     <title>OOP Course Form Project</title>
 </head>
 
 <body>
     <div class="app-container">
-        <h1 class="app-title">Get a Free course</h1>
-        <form action="" class="search-form">
-            <div class="search-name"><label class="name-icon"><i class="fas fa-user"></i></label><input class="search-input-name" type="text"></div>
-            <div class="search-course"><label class="course-icon"><i class="fas fa-book"></i></label><input class="search-input-course" type="text"></div>
-            <div class="search-author"><label class="author-icon"><i class="fas fa-user-circle"></i></label><input class="search-input-author" type="text"></div>
-        </form>
+        <div class="app-title-container">
+            <h1 class="app-title">Get a Free course</h1>
+        </div>
+        <div class="app-form-container">
+            <form action="" class="search-form">
+                <div class="search-name">
+                    <label class="name-icon"><i class="fas fa-user"></i></label>
+                    <input class="search-input-name" type="text">
+                </div>
+                <div class="search-course">
+                    <label class="course-icon"><i class="fas fa-book"></i></label>
+                    <input class="search-input-course" type="text">
+                </div>
+                <div class="search-author">
+                    <label class="author-icon"><i class="fas fa-user-circle"></i></label>
+                    <input class="search-input-author" type="text">
+                </div>
+                <div class="search-submit">
+                    <input class="search-input-button" type="button" value="Submit">
+                </div>
+            </form>
+        </div>
+        <div class="app-courses-container">
+            <ul class="courses-list"></ul>
+        </div>
     </div>
-    <script src="js/app.js"></script>
+    <script type="module" src="./js/app.mjs"></script>
 </body>
 
 </html>
